--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
  {
-	    "name": "worker-name",
+		"name": "end-screen-addiction",
 	    "compatibility_date": "2025-06-13",
 	    "assets": {
 	    "directory": "./dist"
